src/stylesheets/sprint/layout.scss
@import '../main/global';

.sprint-member-cell {
    vertical-align: middle;
}

.sprint-member {
    width: 8.5rem;
    height: 8.5rem;

    .sprint-member-image {
        width: 5rem;
        height: 5rem;
        cursor: default;
    }
}

.sprint-member-image {
    width: 4rem;
    cursor: default;
}

figure {
    position: relative;
    text-align: center;
    margin: 1.3rem;
}

figcaption {
    padding: 0.3rem;
}

.scrum-master {
    width: 3rem;
    position: absolute;
    right: -1rem;
    top: -2rem;
}

.sprint-table-wrapper {
    display: inline-block;
    width: 80%;

    .table-cell {
        @include chalk-cell();
        max-width: 7rem;
        //overflow: hidden;
    }

    .table-heading {
        @include chalk-underline();
        border: none;
    }
}

.board {
    width: 90%;
    margin: 0 auto;
}

.board .table-heading:first-child,
.board .table-cell:first-child {
    width: 8rem;
}

.sprint-cards-container {
    display: flex;
    line-height: 1rem;
    position: relative;
    margin: 0.4rem 1rem;
}

.sprint-card-wrapper {
    position: absolute;
    margin: 0;
    padding: 0;
    top: 0;
    left: 0;
    transition: all 0.9s ease-in-out;

    .card {
        border: 1px $white;
        margin: 0;
    }
}

.sprint-cards-container-close-heap-btn {
    top: 2rem;
    left: 1rem;
    padding: 0.5rem;
    cursor: pointer;
}

.sprint-velocity {
    width: 16rem;
    margin: 0 auto;
}

.sprint-velocity-title {
    padding-bottom: 0.7rem;
}

.open-heap-img {
    width: 100%;
    max-height: 100%;
}

.container-size {
    position: absolute;
    top: 2rem;
    left: 2.2rem;
}

.table-heading i {
    margin: 0 0.3rem;
}

